minor benchmark properties updates